--- a/apps/mobile/.maestro/flows/E2E-002-search-validation.yaml
+++ b/apps/mobile/.maestro/flows/E2E-002-search-validation.yaml
@@ -1,11 +1,10 @@
 # flow: E2E-002 Search Validation
 # intent:
 #   Validate search functionality for different input types:
-#   1. Zip code search (10001) - verify data and category cards appear
-#   2. City search (Montreal) - verify location search works
+#   1. City search (New York) - verify data and category cards appear
+#   2. Different city search (Montreal) - verify location search works
 #
-# This flow ensures the search feature correctly handles both
-# numeric zip codes and text-based city names.
+# This flow ensures the search feature correctly handles city-based searches.
 
 appId: ${MAESTRO_APP_ID}
 onFlowStart:
@@ -13,73 +12,56 @@ onFlowStart:
 ---
 
 # ========================================
-# Test 1: Zip Code Search (10001)
+# Test 1: City Search (New York)
 # ========================================
-# Verify search bar is visible on app start
 - assertVisible:
-    text: "Search zip codes..."
+    text: "Search city or.*"
     label: "Search bar is visible"
 
-# Tap on search bar to activate it
 - tapOn:
-    text: "Search zip codes..."
+    text: "Search city or.*"
     label: "Tap on search bar"
 
-# Enter zip code 10001
-- inputText: "10001"
-
-# Submit the search
+- inputText: "New York"
 - pressKey: Enter
 
-# Wait for data to load
 - waitForAnimationToEnd
+- extendedWaitUntil:
+    visible: "New York"
+    timeout: 10000
 
-# Assert the zip code is displayed
+# Assert category cards appear
 - assertVisible:
-    text: "10001"
-    label: "Zip code 10001 is displayed in results"
-
-# Assert category cards appear (Water, Air, Health, or Disaster)
-# Using optional: true since exact cards may vary by location
-- assertVisible:
-    text: "Water"
+    text: "Tap Water.*"
     optional: true
-    label: "Water category card visible"
+    label: "Tap Water Quality category card visible"
 
 - assertVisible:
-    text: "Air"
+    text: "Air Pollut.*"
     optional: true
-    label: "Air category card visible"
+    label: "Air Pollution category card visible"
 
 - assertVisible:
-    text: "Health"
+    text: "Pathogen.*"
     optional: true
-    label: "Health category card visible"
+    label: "Pathogens category card visible"
 
 - assertVisible:
-    text: "Disaster"
+    text: "Disaster.*"
     optional: true
-    label: "Disaster category card visible"
+    label: "Disaster Risk category card visible"
 
 # ========================================
 # Test 2: City Search (Montreal)
 # ========================================
-# Tap on search bar again to search for a city
 - tapOn:
-    text: "Search zip codes..."
+    text: "Search city or.*"
     label: "Tap on search bar for city search"
 
-# Enter city name Montreal
 - inputText: "Montreal"
-
-# Submit the search
 - pressKey: Enter
 
-# Wait for data to load
 - waitForAnimationToEnd
-
-# Assert results appear for Montreal
-# The city name or related location info should be visible
-- assertVisible:
-    text: "Montreal"
-    label: "Montreal search results are displayed"
+- extendedWaitUntil:
+    visible: "Montreal"
+    timeout: 10000
