--- a/apps/mobile/.maestro/flows/E2E-005-dashboard-accordion.yaml
+++ b/apps/mobile/.maestro/flows/E2E-005-dashboard-accordion.yaml
@@ -23,11 +23,11 @@ onFlowStart:
     text: "Search city or.*"
     label: "Tap on search bar"
 
-- inputText: "10001"
+- inputText: "New York"
 - pressKey: Enter
 - waitForAnimationToEnd
 - extendedWaitUntil:
-    visible: "10001"
+    visible: "New York"
     timeout: 10000
 
 # ========================================
@@ -137,7 +137,7 @@ onFlowStart:
 
 # Verify we're back on dashboard
 - assertVisible:
-    text: "10001"
+    text: "New York"
     label: "Back on dashboard with zip code visible"
 
 # ========================================
