fix(ci): start Metro bundler for expo-dev-client E2E tests
The debug APK is an expo-dev-client build that requires a running
Metro bundler to serve the JS bundle. Without Metro, the app shows
the 'Development servers' screen and never loads the actual app,
causing all 9 Maestro flows to fail at their first assertion.

- Start Metro bundler in background before Maestro tests
- Wait for Metro to be ready (up to 120s)
- Forward port 8081 to emulator via adb reverse
- Clean up Metro process after tests complete

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -102,8 +102,33 @@ jobs:
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim
           disable-animations: true
           script: |
+            # Install the dev-client APK
             adb install apps/mobile/android/app/build/outputs/apk/debug/app-debug.apk
+
+            # Start Metro bundler in background (dev-client needs it to serve the JS bundle)
+            cd apps/mobile
+            npx react-native start --port 8081 &
+            METRO_PID=$!
+            cd ../..
+
+            # Wait for Metro to be ready
+            echo "Waiting for Metro bundler..."
+            for i in $(seq 1 60); do
+              if curl -s http://localhost:8081/status 2>/dev/null | grep -q "packager-status:running"; then
+                echo "Metro is ready!"
+                break
+              fi
+              sleep 2
+            done
+
+            # Forward Metro port to emulator
+            adb reverse tcp:8081 tcp:8081
+
+            # Run Maestro tests
             $HOME/.maestro/bin/maestro test apps/mobile/.maestro/flows --env MAESTRO_APP_ID=com.epiphanyapps.mapyourhealth
+
+            # Cleanup
+            kill $METRO_PID 2>/dev/null || true
 
       - name: Upload test results
         if: always()
