--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -25,8 +25,10 @@ jobs:
     env:
       MAESTRO_APP_ID: com.epiphanyapps.mapyourhealth
       JAVA_HOME: /usr/local/opt/openjdk@17/libexec/openjdk.jdk/Contents/Home
-      PATH: /usr/local/opt/openjdk@17/bin:${{ env.PATH }}
     steps:
+      - name: Set up Java in PATH
+        run: echo "/usr/local/opt/openjdk@17/bin" >> $GITHUB_PATH
+
       - name: Checkout code
         uses: actions/checkout@v4
 
