--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -46,6 +46,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "@tanstack/react-query": "^5.90.21",
     "apisauce": "3.1.1",
     "aws-amplify": "^6.13.0",
     "date-fns": "^4.1.0",
