--- a/apps/mobile/.maestro/flows/E2E-001-subscription-flow.yaml
+++ b/apps/mobile/.maestro/flows/E2E-001-subscription-flow.yaml
@@ -2,7 +2,7 @@
 # intent:
 #   Test the complete guest-to-subscriber journey:
 #   1. Guest sees empty state with search prompt
-#   2. Guest can search for zip codes and view data
+#   2. Guest can search for cities and view data
 #   3. Follow button triggers auth gate
 #   4. User can navigate to signup
 #
@@ -19,7 +19,7 @@ onFlowStart:
 # ========================================
 # Verify empty state is shown for guests
 - assertVisible:
-    text: "Find out how safe your zip code is"
+    text: "Find out how safe your city is"
     label: "Guest empty state title is visible"
 
 - assertVisible:
@@ -28,26 +28,26 @@ onFlowStart:
 
 # Verify search bar is visible
 - assertVisible:
-    text: "Search zip codes..."
+    text: "Search city or location..."
     label: "Search bar is visible"
 
 # ========================================
 # Part 2: Search for a Zip Code
 # ========================================
 - tapOn:
-    text: "Search zip codes..."
+    text: "Search city or location..."
     label: "Tap on search bar"
 
 - inputText: "90210"
 - pressKey: Enter
 
-# Wait for zip code data to load
+# Wait for location data to load
 - waitForAnimationToEnd
 
-# Verify we navigated to the zip code with data
+# Verify we navigated to the location with data
 - assertVisible:
     text: "90210"
-    label: "Zip code is visible"
+    label: "Location is visible"
 
 # Verify category cards are visible (any of: Water, Air, Health, Disaster)
 - assertVisible:
@@ -58,19 +58,19 @@ onFlowStart:
 # Part 3: Search for a Different Zip Code
 # ========================================
 - tapOn:
-    text: "Search zip codes..."
+    text: "Search city or location..."
     label: "Tap on search bar"
 
 - inputText: "10001"
 - pressKey: Enter
 
-# Wait for zip code data to load
+# Wait for location data to load
 - waitForAnimationToEnd
 
-# Verify we navigated to the new zip code
+# Verify we navigated to the new location
 - assertVisible:
     text: "10001"
-    label: "New zip code is visible"
+    label: "New location is visible"
 
 # ========================================
 # Part 4: Follow Button Triggers Auth Gate
@@ -117,7 +117,7 @@ onFlowStart:
 # Verify we can get back to dashboard
 - runFlow:
     when:
-      visible: "Search zip codes..."
+      visible: "Search city or location..."
     commands:
       - assertVisible:
           text: "10001"
