fix: update Maestro E2E tests with correct UI text and autocomplete flow
- Fix empty state text: 'location' not 'city'
- Fix search to use autocomplete suggestions instead of pressKey:Enter
- Add assertNotVisible for dev client UI
- Fix E2E-001 text to match current app
- All 3 tests passing on Moto E13 (release build)

Test results: 3/3 passed in 2m 23s

--- a/apps/mobile/.maestro/flows/E2E-001-subscription-flow.yaml
+++ b/apps/mobile/.maestro/flows/E2E-001-subscription-flow.yaml
@@ -19,7 +19,7 @@ onFlowStart:
 # ========================================
 # Verify empty state is shown for guests
 - assertVisible:
-    text: "Find out how safe your city is"
+    text: "Find out how safe your location is"
     label: "Guest empty state title is visible"
 
 - assertVisible:
