--- a/apps/mobile/.maestro/flows/E2E-102-search-functionality.yaml
+++ b/apps/mobile/.maestro/flows/E2E-102-search-functionality.yaml
@@ -1,11 +1,11 @@
 # flow: E2E-102 Search Functionality Validation
 # intent:
-#   Comprehensive search testing:
-#   1. Zip code search (10001) — verify results and category cards
-#   2. City name search (Beverly Hills) — verify text-based search
-#   3. Another zip code (90210) — verify multiple searches work
-#   4. Verify search suggestions/autocomplete appear
+#   Comprehensive search testing with autocomplete:
+#   1. Type "New York" → verify suggestions appear → tap one
+#   2. Verify location data loads with category cards
+#   3. Search again with "Miami" → verify different results
 #
+# NOTE: Requires network access for search API and data fetching.
 # Issue: https://github.com/epiphanyapps/mapyourhealth/issues/100
 
 appId: ${MAESTRO_APP_ID}
@@ -14,7 +14,7 @@ onFlowStart:
 ---
 
 # ========================================
-# Test 1: Zip Code Search (10001)
+# Test 1: Search "New York" with autocomplete
 # ========================================
 - assertVisible:
     text: "Search city or location..."
@@ -24,16 +24,23 @@ onFlowStart:
     text: "Search city or location..."
     label: "Activate search"
 
-- inputText: "10001"
-- pressKey: Enter
+- inputText: "New York"
 
-- waitForAnimationToEnd
+# Wait for autocomplete suggestions
+- waitForAnimationToEnd:
+    timeout: 5000
 
-- assertVisible:
-    text: "10001"
-    label: "Zip code 10001 results displayed"
+# Tap first suggestion
+- tapOn:
+    text: ".*New York.*"
+    index: 0
+    label: "Tap New York suggestion"
 
-# Verify category cards load
+# Wait for data to load
+- waitForAnimationToEnd:
+    timeout: 10000
+
+# Verify category cards load (any of: Water, Air, Health, Disaster)
 - assertVisible:
     text: "Water"
     optional: true
@@ -49,45 +56,32 @@ onFlowStart:
     optional: true
     label: "Health category visible"
 
-- assertVisible:
-    text: "Disaster"
-    optional: true
-    label: "Disaster category visible"
-
 # ========================================
-# Test 2: City Name Search (Beverly Hills)
+# Test 2: Search "Miami"
 # ========================================
 - tapOn:
     text: "Search city or location..."
-    label: "Tap search bar for city search"
+    label: "Tap search bar for second search"
 
-- inputText: "Beverly Hills"
-- pressKey: Enter
+- eraseText: 20
+- inputText: "Miami"
 
-- waitForAnimationToEnd
+# Wait for suggestions
+- waitForAnimationToEnd:
+    timeout: 5000
 
-- assertVisible:
-    text: "Beverly Hills"
-    label: "Beverly Hills results displayed"
-
-# ========================================
-# Test 3: Another Zip Code (90210)
-# ========================================
+# Tap first Miami suggestion
 - tapOn:
-    text: "Search city or location..."
-    label: "Tap search bar for second zip search"
+    text: ".*Miami.*"
+    index: 0
+    label: "Tap Miami suggestion"
 
-- inputText: "90210"
-- pressKey: Enter
+# Wait for data to load
+- waitForAnimationToEnd:
+    timeout: 10000
 
-- waitForAnimationToEnd
-
-- assertVisible:
-    text: "90210"
-    label: "Zip code 90210 results displayed"
-
-# Verify category cards still load for different location
+# Verify data loaded for Miami
 - assertVisible:
     text: "Water"
     optional: true
-    label: "Categories load for 90210"
+    label: "Categories load for Miami"
