--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -76,6 +76,7 @@
     "react-native-get-random-values": "~1.11.0",
     "react-native-keyboard-controller": "1.18.5",
     "react-native-mmkv": "3.3.3",
+    "react-native-paper": "5.15.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "5.6.0",
     "react-native-screens": "~4.16.0",
